--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    //注解依赖必须要有
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    //glide
+    api 'com.github.bumptech.glide:glide:4.5.0'
     //rxjava
     implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
